# accounter

./: .env.dev  docker-compose.yml  pyproject.toml
accounter/accounter/: asgi.py  mixins.py  settings.py  urls.py  wsgi.py
accounter/expenses/: admin.py  models.py
accounter/expenses/migrations/: 0001_create_expensesnote_model.py
accounter/incomes/: admin.py  endpoints.py  models.py  serializers.py  urls.py
accounter/incomes/migrations/: 0001_create_incomesnote_model.py  0001_create_photo_model.py  0002_create_one_note_model.py
accounter/user/: admin.py  endpoints.py  models.py  serializers.py  urls.py
accounter/user/migrations/: 0001_initial.py  0002_create_photo_model.py
